--- a/wp-content/themes/linen_pro/stylesheets/two.css
+++ b/wp-content/themes/linen_pro/stylesheets/two.css
@@ -27,7 +27,7 @@
 .slide img {position: absolute;	z-index: 50;	width: 652px;	height: 353px;	top: -20px;	left:55px;	display:block;}
 .slide-content {z-index: 100;	position: absolute; right:-25px;	width: 560px;	height:32px;	padding:5px 20px 15px 20px; background-color:#ffffff; /*box-shadow: 3px 3px 3px #888;*/ margin-top:196px; opacity:0.9;filter:alpha(opacity=90);}
 .slide-content h2 {	color:#666;	font-size: 1.4em;	font-family: Helvetica, Arial, sans-serif;	font-weight: normal;	text-shadow: 0 1px 0 #222;}
-.slide-content p {font-size: 1.5em;	line-height: 1.5em;	margin: 0 0 10px 0; color:#383838;}
+.slide-content p {font-size: 1.35em;	line-height: 1.5em;	margin: 0 0 10px 0; color:#383838;}
 /*.slide-content p span.top {background:url(/wp-content/themes/linen_pro/images/top-quote.gif) no-repeat; height:40px; width:46px;}
 .slide-content p span.bottom {background:url(/wp-content/themes/linen_pro/images/bottom-quote.gif) no-repeat; height:40px; width:46px;}*/
 .slide-content a.more-link {	display: block;	position: absolute;	bottom: 0;	right: 0;	padding: 10px 20px;	font-family: Helvetica, Arial, sans-serif;	color: #fff;	background: #333;  }
